<resources>

	<string name="app_name">NyanpasuTile</string>

	<!-- Main Settings -->
	<string name="title_tiles">Tiles</string>
	<string name="title_other">Other</string>
	<string name="pref_about">About</string>
	<string name="pref_donate_alipay">Donate (Alipay)</string>
	<string name="pref_donate_alipay_address">316643843\@qq.com</string>
	<string name="pref_donate_alipay_address_copied">Copied to clipboard.</string>

	<string name="pref_application">Application</string>
	<string name="app_version_format">%1$s (%2$d)</string>
	<string name="pref_github">Github Repository</string>
	<string name="pref_github_url">https://github.com/fython/NyanpasuTile</string>
	<string name="pref_author">Author</string>
	<string name="pref_weibo">Sina Weibo</string>
	<string name="pref_weibo_url">http://weibo.com/fython</string>
	<string name="pref_email">Email</string>
	<string name="pref_email_address">fython\@163.com</string>

	<!-- Weather -->
	<string name="weather_tile_label">Weather</string>

	<!-- Scan QR -->
	<string name="scan_qr_tile_label">Scan QR</string>
	<string name="pref_scan_method">Default scanner</string>
	<string-array name="pref_scan_method_arrays">
		<item>NyanpasuTile</item>
		<item>Alipay</item>
		<item>WeChat</item>
	</string-array>
	<string-array name="pref_scan_method_value">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>

	<!-- Scanner -->
	<string name="activity_scanner">Scan barcode</string>
	<string name="dialog_explanation_permission_title">Permission Denied</string>
	<string name="dialog_explanation_permission_message">The scanner is built-in plugin so it needs users to grant camera permission for working normally. Without permission, you cannot scan barcode.</string>
	<string name="dialog_explanation_permission_pos_btn">Go to Settings</string>
	<string name="toast_permission_denied">Permission denied. Cannot start scanner.</string>
	<string name="toast_permission_denied_action">Settings</string>

	<string name="dialog_result">Result</string>
	<string name="dialog_result_copy_btn">Copy to clipboard</string>

	<!-- Alipay Barcode -->
	<string name="alipay_barcode_tile_label">Alipay Barcode</string>

	<!-- Network Adb -->
	<string name="network_adb_tile_label">Adb Over LAN</string>

	<!-- Root Check -->
	<string name="root_check_desc">This operation needs root permission. We will launch this window to initialize. </string>
	<string name="root_check_state_please_wait">Please wait....</string>
	<string name="root_check_state_failed">Failed to access root permission.</string>
	<string name="root_check_state_finish">Finish. Now you can close this window.</string>

</resources>
